## [2.0.1] - not released yet
 * clicking or selecting a row in annotation editor (at bottom) should select the corresponding region.
 * converted svg logo to use standard font
 * zoom is enabled with [Ctrl] + mouse wheel (issue 143)
 * bounding boxes can now be drawn using touchscreen in mobile devices ** @todo **
 * video annotation ** @todo **
 * save image and annotations as JPG ** @todo **
 * magnifying glass based image zoom ** @todo **
 * settings for label width, region shape style, etc ** @todo **
 * import annotations: handle entries for which file_size = -1 (i.e. unknown)

## [2.0.0] - July 15, 2018
 * rectangles can now be resized from edges (issue 120)
 * added POLYLINE shape
   - polygon region shape coordinates set does not end with the first coordinate (closed loop is defined by the shape: polygon, polyline)
 * renamed many methods and variables
 * attributes editor
   - added _via_attributes{'region','file'} and removed _via_region_attributes, _via_file_attributes
   - attributes add/remove/update from left sidebar panel
   - attribute types: text (default), checkbox, radio, dropdown, image (from url or base64 encoded image data)
 * annotation editor
   - similar to previous versions (spreadsheet like editor) supporting attribute types: text, checkbox, radio, etc
   - tabbed panel for region and file attribute editor
   - change size of contents and panel
 * via project save/load
   - everything (annotations, attributes, application settings, etc) can now be saved as a VIA project (a json file)
 * exported csv annotation header line does not contain "#" (this may be a breaking change) (issue 122)
 * zoom level does not reset when navigating prev/next images (issue 125)
 * VIA project: open/save
   - image file list can be filtered using regular expression
   - preset filters for image file list
   - shortcuts to add files to project (local, url) and remove files from project